Emit warning when touchscreen association fails.

Useful to determine if a touchscreen not working is caused by touchscreen
association or by some other issue when the device is not in devmode.

BUG=600436

Review URL: https://codereview.chromium.org/1878393002

Cr-Commit-Position: refs/heads/master@{#386796}

Former-commit-id: c0708c1da9664bd232e7870db74c8b8c59f4d3c1